--- a/app/src/main/res/layout/custom_marker_layout.xml
+++ b/app/src/main/res/layout/custom_marker_layout.xml
@@ -7,13 +7,14 @@
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/user_dp"
+        android:id="@+id/userImage"
         android:layout_width="42dp"
         android:layout_height="46dp"
         android:layout_alignParentTop="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="4dp"
         app:civ_border_width="1dp"
+        android:visibility="visible"
         app:civ_border_color="#fff"/>
 
     <RelativeLayout
